deps/v8/test/message/fail/try-catch-lexical-conflict.out
*%(basename)s:10: SyntaxError: Identifier 'x' has already been declared
  let x;
      ^
SyntaxError: Identifier 'x' has already been declared
